Fixed wall pages to look better on mobile

--- a/static/css/thewall.css
+++ b/static/css/thewall.css
@@ -75,11 +75,14 @@ body {
 }
 
 #qrcode {
-  display: inline-block;
+  float: left;
+  margin-right: 5px;
 }
 
 .well {
-  text-align: center;
+  text-align: left;
+  padding: 10px;
+  height: 105px;
 }
 
 label {
